[project]
name = "binji"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.25.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.7",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.2",
    "load-dotenv>=0.1.0",
    "pillow>=11.3.0",
    "streamlit>=1.46.1",
]

[dependency-groups]
dev = [
    "langgraph-api>=0.2.86",
    "langgraph-cli>=0.3.4",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["binji"]

[tool.setuptools.package-dir]
"binji" = "src/binji"
